cm. edit com style

--- a/src/front/components/apps/cm/editor/col/compositions/EditComposition.scss
+++ b/src/front/components/apps/cm/editor/col/compositions/EditComposition.scss
@@ -3,6 +3,16 @@
         .cat-list-title {
             background-color: var(--color--2);
         }
+
+        .nav-panel {
+            background: var(--color--1);
+            padding-top: 5px;
+            top: -8px;
+        }
+
+        .com-player {
+            top: 28px;
+        }
     }
 
     .edit-compositions {
