--- a/src/front/components/apps/cm/col/com/player/ComPlayer.scss
+++ b/src/front/components/apps/cm/col/com/player/ComPlayer.scss
@@ -11,6 +11,7 @@
         white-space: nowrap;
         overflow: hidden;
         background: var(--color--2);
+        transition: opacity .2s, margin .2s;
 
         &.hidden-controls {
             width: var(--com-player-size);
