--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -1,4 +1,5 @@
 body {
+    --full-height: 100%;
     --main-gap: 8px;
     --main-big-gap: 18px;
     --main-giant-gap: 40px;
@@ -10,8 +11,9 @@ body {
     --header-top: 0px;
     --header-height: calc(var(--header-padding-top) + var(--header-content-height));
     --footer-bottom: 0px;
-    --content-height: calc(100vh - var(--header-height) - var(--footer-height) - var(--keyboard-flash-height));
+    --content-height: calc(100% - var(--footer-height) - var(--keyboard-flash-height));
     --content-top: var(--header-content-height);
+    --phase-container-height: calc(100% - var(--header-height));
     --keyboard-flash-height: 0px;
     --footer-opacity: 1;
 
@@ -22,7 +24,6 @@ body {
     --keyboard-flash-color: var(--text-color);
 
     overflow: hidden;
-
 
     .padding-giant-gap {
         padding: var(--main-giant-gap);
@@ -74,7 +75,7 @@ body {
         --footer-height: 0px;
         --footer-opacity: 0;
 
-        .phase-container > .content {
+        .phase-container>.content {
             padding-bottom: var(--keyboard-flash-height);
         }
     }
@@ -84,7 +85,7 @@ body {
         top: 0;
         overflow: hidden;
         height: 100%;
-        width: 100%;
+        width: 100vw;
 
         .collapse-fullscreen-button {
             position: absolute;
@@ -95,11 +96,16 @@ body {
             z-index: 50;
         }
 
+        .phase-container {
+            height: var(--phase-container-height);
+        }
+
         &.fullscreen-mode {
             --header-top: calc(0px - var(--header-height));
             --header-container-top: calc(0px - var(--header-content-height));
             --footer-bottom: calc(0px - var(--footer-height));
-            --content-height: 100vh;
+            --content-height: 100%;
+            --phase-container-height: 100%;
             --content-top: 0;
 
             .collapse-fullscreen-button {
