--- a/src/front/complect/fullscreen-content/FullscreenContent.scss
+++ b/src/front/complect/fullscreen-content/FullscreenContent.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   z-index: 350;
 
@@ -24,7 +24,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: calc(100vh - var(--keyboard-flash-height));
+    height: calc(100% - var(--keyboard-flash-height));
     width: 100vw;
     background-color: var(--current-bg);
     overflow-y: auto;
