--- a/src/front/complect/qr-code/QRCode.scss
+++ b/src/front/complect/qr-code/QRCode.scss
@@ -5,7 +5,7 @@
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         justify-content: center;
         align-items: center;
         flex-direction: column;
