--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -25,7 +25,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   font-size: 16px;
 
   background-color: var(--current-bg);
