--- a/src/front/complect/modal/Modal.scss
+++ b/src/front/complect/modal/Modal.scss
@@ -1,4 +1,7 @@
 .app-modal-window {
+    --color: var(--color--4);
+    --padding: 15px;
+
     position: absolute;
     z-index: 1000;
     display: flex;
@@ -7,7 +10,7 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    background: rgba(0, 0, 0, .2);
+    background: var(--color--1);
 
     ::-webkit-scrollbar {
         display: none;
@@ -19,18 +22,18 @@
         width: 500px;
         min-height: max-content;
         max-height: calc(100% - 10px);
-        max-width: calc(100vw - 10px);
-        border: solid 1px var(--color--3);
+        max-width: calc(100vw - 50px);
         border-radius: 5px;
         background-color: var(--color--2);
 
         >.app-modal-title {
             display: flex;
             justify-content: space-between;
-            background-color: var(--color--3);
-            color: var(--color--1);
-            padding: 5px;
+            color: var(--color);
             max-height: 2em;
+            font-size: 1.2em;
+            font-weight: bold;
+            margin: var(--padding);
 
             >.app-modal-title-close-icon {
                 cursor: pointer;
@@ -39,19 +42,18 @@
         }
 
         >.app-modal-body {
-            padding: 0px 5px;
-            max-height: calc(100% - 5em);
+            max-height: calc(100vh - 5em - 20px - 30px);
             overflow-y: auto;
             overflow-x: hidden;
-            color: var(--color--3);
+            color: var(--color);
 
             &.with-error {
-                max-height: calc(100% - 6.2em);
+                max-height: calc(100vh - 6.2em);
             }
 
             >.app-modal-body-inner {
                 >.app-modal-description {
-                    padding: 10px 0;
+                    margin: 0 var(--padding);
                 }
 
                 >.app-modal-body-input-list {
@@ -75,7 +77,8 @@
             >.app-modal-footer-button-list {
                 overflow-x: auto;
                 overflow-y: hidden;
-                padding: 10px 5px;
+                padding: var(--padding);
+                text-align: right;
 
                 >.app-modal-footer-button-list-inner {
                     display: inline-block;
@@ -83,10 +86,11 @@
 
                     >.app-modal-footer-button-list-item {
                         border-radius: 3px;
-                        background-color: var(--color--3);
-                        color: var(--color--1);
+                        background-color: transparent;
+                        color: var(--color);
                         outline: none;
                         margin: 0 2px;
+                        font-weight: bold;
                         cursor: pointer;
                     }
                 }
