AbsoluteBottomPopup. configurable items

--- a/src/front/complect/absolute-popup/AbsolutePopup.scss
+++ b/src/front/complect/absolute-popup/AbsolutePopup.scss
@@ -16,6 +16,7 @@
         align-items: center;
         width: 100%;
         max-width: 450px;
+        cursor: pointer;
 
         &.abs-full {
             cursor: pointer;
