Modal.style sm fix

--- a/src/front/complect/modal/Modal.scss
+++ b/src/front/complect/modal/Modal.scss
@@ -53,7 +53,7 @@
 
             >.app-modal-body-inner {
                 >.app-modal-description {
-                    margin: 0 var(--padding);
+                    margin: var(--padding);
                 }
 
                 >.app-modal-body-input-list {
