--- a/src/front/complect/keyboard/Keyboard.scss
+++ b/src/front/complect/keyboard/Keyboard.scss
@@ -88,7 +88,7 @@
                     >.keyboard-flash-key-more-box-inner {
                         display: flex;
                         flex-direction: column;
-                        align-items: start;
+                        align-items: flex-start;
 
                         .key-description {
                             position: absolute;
