Keyboard. close button fix

--- a/src/front/complect/keyboard/Keyboard.scss
+++ b/src/front/complect/keyboard/Keyboard.scss
@@ -389,7 +389,7 @@
 
     >.icon-button-container {
         position: absolute;
-        right: .5em;
+        right: 0;
         top: 0;
         height: 100%;
         display: flex;
