--- a/src/front/components/apps/cm/translation/Translation.scss
+++ b/src/front/components/apps/cm/translation/Translation.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         width: 100vw;
-        height: 100%;
+        height: 100vh;
     }
 
     .translation-screen-wrapper {
@@ -141,18 +141,18 @@
 
         background: black;
         width: 100vw;
-        height: 100%;
+        height: 100vh;
         color: white;
         z-index: 1000;
         transition: transform .1s;
 
         &.rotate-fullscreen-translation {
             transform: rotate(90deg);
-            width: 100%;
+            width: 100vh;
             height: 100vw;
 
             .translation-screen-wrapper-inner {
-                width: 100% !important;
+                width: 100vh !important;
                 height: 100vw !important;
             }
         }
