--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -513,6 +513,16 @@ input:-webkit-autofill:active {
   font-size: 1em;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .rotate {
   animation: rotate 1s linear infinite;
 
