--- a/src/front/components/index/parts/login/IndexLogin.scss
+++ b/src/front/components/index/parts/login/IndexLogin.scss
@@ -27,6 +27,10 @@
         max-width: 500px;    
         margin: 5px 0;
 
+        .icon-button-container {
+            margin-right: 10px;
+        }
+
         >.input-wrapper {
             position: relative;
             display: flex;
@@ -40,6 +44,7 @@
                 background-color: var(--color--2);
                 color: var(--text-color);
                 padding: 0.5em var(--padding-h);
+                padding-right: 1.5em;
                 width: 100%;
                 border-radius: 0.7em;
                 font-size: 1.5em;
