--- a/src/front/components/apps/cm/editor/col/compositions/complect/chord-applications/ChordApplicationsRedactor.scss
+++ b/src/front/components/apps/cm/editor/col/compositions/complect/chord-applications/ChordApplicationsRedactor.scss
@@ -1,4 +1,8 @@
 .chord-application-redactor {
+    .composition-line {
+        display: inline;
+    }
+
     .binder {
         display: inline-block;
         width: 1em;
@@ -27,10 +31,15 @@
             background-color: var(--color--2);
         }
 
-        &.chorded {
+        &.chorded:not(.pre) {
+
+            >.fragment>* {
+                display: inline-block;
+            }
 
             &:first-letter,
-            &.spaced-word:after {
+            &.spaced-word:after,
+            &[attr-chord]>.fragment>*:first-letter {
                 background-color: rgba(255, 209, 0, .3);
             }
         }
