cm..editor. chorded letter marker fixed

--- a/src/front/components/apps/cm/editor/col/compositions/complect/chord-applications/ChordApplicationsRedactor.scss
+++ b/src/front/components/apps/cm/editor/col/compositions/complect/chord-applications/ChordApplicationsRedactor.scss
@@ -32,9 +32,12 @@
         }
 
         &.chorded:not(.pre) {
-
             >.fragment>* {
                 display: inline-block;
+
+                &:first-letter {
+                    background-color: var(--color--ko);
+                }
             }
 
             &:first-letter,
