--- a/src/front/components/apps/leader/components/games/timers/GameTimer.scss
+++ b/src/front/components/apps/leader/components/games/timers/GameTimer.scss
@@ -1,4 +1,6 @@
 .game-timer-master {
+  padding: 50px 16px 10px 16px;
+
   .start-total {
     --size: 30vmin;
     border-radius: 100%;
@@ -34,43 +36,101 @@
     }
 
     .control-button {
-      > * {
-        --size: 30px;
+      >* {
+        --size: 40px;
+
         color: var(--color--3);
-        width: var(--size);
         min-width: var(--size);
-        height: var(--size);
+        min-height: var(--size);
       }
 
-      &.start-button {
-        > * {
-          --svg-color: var(--color--3);
-        }
+      >.start-button {
+        --icon-color: var(--color--7);
       }
 
-      &.finish-button {
-        > * {
-          --svg-color: var(--color--ko);
-        }
+      >.finish-button {
+        --icon-color: var(--color--4);
+      }
+
+      >.reset-button {
+        --icon-color: var(--color--ko);
       }
     }
   }
 }
 
+.team-rating-manual-redact-input {
+  width: 70%;
+  max-width: 250px;
+
+  @media screen and (max-width: 550px) {
+    width: 90%;
+  }
+}
+
+.teams-resort-loader {
+  position: absolute;
+  right: 5px;
+  top: -30px;
+  pointer-events: none;
+  visibility: hidden;
+
+  &.in-process {
+    visibility: visible;
+  }
+}
+
 .timer-screen {
   color: var(--color--3);
+  white-space: nowrap;
 
-  &:not(.paused)::after {
-    content: "000";
-  }
+  &:not(.paused) {
+    &::after {
+      content: "000";
+    }
 
-  &.started::after {
-    animation: digit-switcher 1s linear infinite;
+    &.started::after {
+      animation: digit-switcher 1s linear infinite;
+      width: 1.8em;
+    }
   }
 
   & .milliseconds-digits,
   &::after {
+    display: inline-block;
     font-size: 0.7em;
+  }
+}
+
+.width-1em {
+  width: 1em;
+}
+
+
+.table-centered-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  >.table {
+    --table-size: 100%;
+    width: var(--table-size);
+    border: solid var(--text-color) 1px;
+
+    >.row {
+      display: flex;
+
+      >.cell {
+        display: flex;
+        justify-content: center;
+        border: solid var(--text-color) 1px;
+        padding: var(--main-gap);
+
+        &:not(.self-width) {
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
@@ -78,60 +138,79 @@
   from {
     content: "001";
   }
+
   5% {
     content: "014";
   }
+
   10% {
     content: "122";
   }
+
   15% {
     content: "136";
   }
+
   20% {
     content: "249";
   }
+
   25% {
     content: "255";
   }
+
   30% {
     content: "360";
   }
+
   35% {
     content: "374";
   }
+
   40% {
     content: "481";
   }
+
   45% {
     content: "493";
   }
+
   50% {
     content: "502";
   }
+
   60% {
     content: "510";
   }
+
   65% {
     content: "624";
   }
+
   70% {
     content: "632";
   }
+
   75% {
     content: "749";
   }
+
   80% {
     content: "753";
   }
+
   85% {
     content: "866";
   }
+
   90% {
     content: "875";
   }
+
   95% {
     content: "987";
   }
+
   100% {
     content: "999";
   }
