--- a/src/front/components/index/parts/login/IndexLogin.scss
+++ b/src/front/components/index/parts/login/IndexLogin.scss
@@ -88,7 +88,7 @@
                 border-color: var(--color--ko);
             }
             >.eva-icon {
-                --svg-color: var(--color--ko);
+                --icon-color: var(--color--ko);
             }
         }
     }
