--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -50,6 +50,10 @@ body {
         margin-bottom: var(--main-big-gap);
     }
 
+    .margin-gap-b {
+        margin-bottom: var(--main-gap);
+    }
+
     .margin-big-gap-h {
         margin-left: var(--main-big-gap);
         margin-right: var(--main-big-gap);
