--- a/src/front/components/apps/cm/editor/Editor.scss
+++ b/src/front/components/apps/cm/editor/Editor.scss
@@ -23,7 +23,7 @@
 }
 
 .orders-redactor {
-    --svg-color: var(--color--7);
+    --icon-color: var(--color--7);
 
     .order-changes-buttons {
         >* {
