--- a/src/front/components/apps/cm/translation/Translation.scss
+++ b/src/front/components/apps/cm/translation/Translation.scss
@@ -125,7 +125,7 @@
         }
 
         >.start-translation {
-            --svg-color: var(--color--5);
+            --icon-color: var(--color--5);
 
             background-color: var(--color--7);
         }
