input-keyboard. global background

--- a/src/front/complect/keyboard/Keyboard.scss
+++ b/src/front/complect/keyboard/Keyboard.scss
@@ -169,7 +169,7 @@
 
     .input {
         padding-left: 3px;
-        background-color: var(--color--2);
+        background-color: var(--input-keyboard-background);
     }
 
     &:not(.with-native-input) {
