--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -5,6 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  --input-keyboard-background: var(--color--1);
+
   --color--1: #242a26;
   --color--2: #3b4b40;
   --color--3: #d5e6d6;
