ScheduleWidgrt. add fields in event component + renming components

--- a/src/front/complect/schedule-widget/ScheduleWidget.scss
+++ b/src/front/complect/schedule-widget/ScheduleWidget.scss
@@ -22,7 +22,7 @@
             }
         }
 
-        >.list-item {
+        .list-item {
             background-color: var(--color--2);
             padding: .7rem;
             border-radius: .5rem;
