App.scss. add styles

--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -50,6 +50,14 @@ body {
         margin-bottom: var(--main-big-gap);
     }
 
+    .margin-big-gap-l {
+        margin-left: var(--main-big-gap);
+    }
+
+    .margin-big-gap-r {
+        margin-right: var(--main-big-gap);
+    }
+
     .margin-gap-b {
         margin-bottom: var(--main-gap);
     }
