ScheduleWidgetAlarm. can open current day & past events grayscaled & fixes

--- a/src/front/index.scss
+++ b/src/front/index.scss
@@ -236,6 +236,10 @@ textarea {
     gap: var(--main-gap);
   }
 
+  &.flex-big-gap {
+    gap: var(--main-big-gap);
+  }
+
   &.flex-wrap {
     flex-wrap: wrap;
   }
