schedule. additions + fixes

--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -62,6 +62,10 @@ body {
         margin-left: var(--main-gap);
     }
 
+    .margin-gap-t {
+        margin-top: var(--main-gap);
+    }
+
     .margin-gap-r {
         margin-right: var(--main-gap);
     }
