--- a/src/front/complect/schedule-widget/days/ScheduleWidgetDay.scss
+++ b/src/front/complect/schedule-widget/days/ScheduleWidgetDay.scss
@@ -4,6 +4,11 @@
 
     &.past {
         filter: grayscale(.7);
+
+        >.day-title {
+            font-size: 1.1rem;
+            opacity: .5;
+        }
     }
 
     >.day-title {
