schedule-widget. roles has users & categories

--- a/src/front/app/App.scss
+++ b/src/front/app/App.scss
@@ -37,6 +37,10 @@ body {
         padding: var(--main-gap);
     }
 
+    .padding-gap-v {
+        padding: var(--main-gap) 0;
+    }
+
     .margin-big-gap {
         margin: var(--main-big-gap);
     }
