--- a/src/front/complect/schedule-widget/days/Day.scss
+++ b/src/front/complect/schedule-widget/days/Day.scss
@@ -1,4 +1,3 @@
-
 .ScheduleWidgetDay {
     margin: 20px 0;
 
@@ -118,11 +117,11 @@
                     filter: grayscale(.7);
                 }
 
-                &.expand {
-                    .day-event-content {
-                        opacity: 1;
-                        max-height: 1000vh;
-                    }
+                .day-event-content {
+                    max-height: 0px;
+                    opacity: 0;
+                    overflow: auto;
+                    animation: expand-content .5s ease-in-out  forwards;
                 }
 
                 >.item-header {
@@ -138,14 +137,24 @@
                 .edit-button {
                     transition: margin-right .2s;
                 }
-
-                .day-event-content {
-                    max-height: 0px;
-                    opacity: 0;
-                    overflow: hidden;
-                    transition: opacity .2s, max-height .2s;
-                }
             }
         }
+    }
+}
+
+.event-rating-display {
+    width: 1.5em;
+    text-align: center;
+}
+
+@keyframes expand-content {
+    0% {
+        max-height: 0px;
+        opacity: 0;
+    }
+
+    100% {
+        max-height: 90vh;
+        opacity: 1;
     }
 }
